添加overview统计的实现；添加跨域处理；修正文档bug
